--- a/patient-pojo/pom.xml
+++ b/patient-pojo/pom.xml
@@ -5,14 +5,8 @@
 	<artifactId>patient-pojo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<dependencies>
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-	</dependencies>
 </project>
