--- a/patient-webapp/pom.xml
+++ b/patient-webapp/pom.xml
@@ -9,6 +9,7 @@
 	<properties>
 		<org.springframework.version>5.0.1.RELEASE</org.springframework.version>
 		<javaee.web.api>8.0</javaee.web.api>
+		<org.apache.tiles.version>3.0.7</org.apache.tiles.version>
 	</properties>
 
 	<dependencies>
@@ -18,6 +19,11 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax/javaee-web-api -->
 		<dependency>
 			<groupId>javax</groupId>
@@ -32,6 +38,25 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-core</artifactId>
+			<version>${org.apache.tiles.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tiles</groupId>
+			<artifactId>tiles-jsp</artifactId>
+			<version>${org.apache.tiles.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.24</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
