--- a/patient-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/patient-webapp/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,8 @@
 	version="3.1">
 	<display-name>patient-webapp</display-name>
 	<welcome-file-list>
-		<welcome-file>login.do</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 
 	<context-param>
