--- a/patient-webapp/pom.xml
+++ b/patient-webapp/pom.xml
@@ -8,23 +8,27 @@
 
 	<properties>
 		<org.springframework.version>5.0.1.RELEASE</org.springframework.version>
+		<org.springframework.security.version>5.0.0.RELEASE</org.springframework.security.version>
 		<javaee.web.api>8.0</javaee.web.api>
 		<org.apache.tiles.version>3.0.7</org.apache.tiles.version>
 	</properties>
 
 	<dependencies>
+		<!-- patient project -->
 		<dependency>
 			<groupId>hu.kuncystem.patient</groupId>
 			<artifactId>patient-service-layer</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
+		<!-- jstl lib -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/javax/javaee-web-api -->
+
+		<!-- webapi -->
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-web-api</artifactId>
@@ -32,13 +36,26 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+		<!-- spring mvc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework.version}</version>
 		</dependency>
 
+		<!-- spring security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${org.springframework.security.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${org.springframework.security.version}</version>
+		</dependency>
+
+		<!-- tiles -->
 		<dependency>
 			<groupId>org.apache.tiles</groupId>
 			<artifactId>tiles-core</artifactId>
@@ -51,6 +68,7 @@
 			<version>${org.apache.tiles.version}</version>
 		</dependency>
 
+		<!-- log -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
